# hunter

./: .travis.yml
cmake/configs/: default.cmake
cmake/find/: Findodb-compiler.cmake
cmake/projects/aws-checksums/: hunter.cmake
cmake/projects/odb-qt/: hunter.cmake
cmake/schemes/: url_sha1_qt.cmake.in
examples/aws-checksums/: CMakeLists.txt  crc_test.c  run_tests.c
examples/odb-qt/: CMakeLists.txt
